# go-raspberry-pi-timelapse

./: .gitignore  .spectral.yaml  .travis.yml  BENCHMARKS.md  CONFIGURATION.md  CONFIG_IMPROVEMENT_SUMMARY.md  IMPLEMENTATION_NIGHT_MODE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  MATERIAL_UI_UPGRADE.md  MONITORING_IMPLEMENTATION.md  Makefile  OPENAPI.md  README.md  build-for-development.sh  build-for-pi.sh  codegen-config.yaml  go.mod  go.sum  main.go  openapi.yaml  rtc.sh  setup.sh  validate-openapi.sh
.github/workflows/: arduino.yml  cpp-object-detection.yml  go-arm.yml  go.yml
Godeps/: Godeps.json
admin/: admin.go  admin_test.go  exec.go
arduino/: .gitignore  README.md  platformio.ini
arduino/hello-world/: README.md  arduino-cli.yaml
arduino/scripts/: build.sh  deploy-arduino-cli.sh  deploy.sh  monitor-arduino-cli.sh  monitor.sh
conf/: conf.go  model.go  settings.go  settings_test.go
conf/valid/: strict_validator.go  validator.go  validator_test.go
cpp-object-detection/: .gitignore  ARCHITECTURE.md  BRIGHTNESS_FILTER_FEATURE.md  BRIGHTNESS_FILTER_IMPLEMENTATION_SUMMARY.md  BURST_MODE_DIAGRAM.md  BURST_MODE_FEATURE.md  BURST_MODE_IMPLEMENTATION_SUMMARY.md  CHANGES_SUMMARY.md  CMakeLists.txt  DEPLOYMENT.md  EFFICIENTDET_D3_IMPLEMENTATION_SUMMARY.md  EXTENDED_OBJECT_DETECTION.md  FEATURE_README.md  GOOGLE_SHEETS_FEATURE.md  GOOGLE_SHEETS_IMPLEMENTATION_SUMMARY.md  GPU_ACCELERATION.md  GPU_IMPLEMENTATION_SUMMARY.md  HOURLY_SUMMARY_EXAMPLE.txt  HOURLY_SUMMARY_FEATURE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Info.plist  LONG_TERM_OPERATION.md  MOVEMENT_DETECTION_IMPROVEMENTS.md  NETWORK_STREAMING_FEATURE.md  NETWORK_STREAM_STATS_INTEGRATION.md  NIGHT_MODE_FEATURE.md  NOTIFICATION_FEATURE.md  NOTIFICATION_IMPLEMENTATION_SUMMARY.md  PHOTO_STORAGE_FEATURE.md  README.md  SCENE_PERSISTENCE_EXAMPLES.md  SCENE_PERSISTENCE_FEATURE.md  SCENE_PERSISTENCE_IMPLEMENTATION_SUMMARY.md  SCENE_PERSISTENCE_QUICK_REFERENCE.md  SMART_PHOTO_STORAGE_EXAMPLES.md  STATIONARY_DETECTION_QUICKSTART.md  STATIONARY_OBJECT_DETECTION.md  SYSTEM_MONITOR_INTEGRATION.md  VIEWFINDER_FEATURE.md  (+3 more)
cpp-object-detection/_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  object_detection
cpp-object-detection/_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  object_detection_tests
cpp-object-detection/build-coverage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp-object-detection/build-coverage/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp-object-detection/docs/: ALTERNATIVE_MODELS_ANALYSIS.md  EXTENDED_OBJECT_DETECTION.md  FEATURE_README.md  GOOGLE_SHEETS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_LONG_TERM.md  NETWORK_STREAMER_SIGPIPE_FIX.md  NETWORK_STREAMING_FEATURE.md  PROFILING.md  PROFILING_INFRASTRUCTURE_SUMMARY.md  PROFILING_QUICKSTART.md  RASPBERRY_PI_SUPPORT.md  SCENE_PERSISTENCE_FEATURE.md  SCENE_PERSISTENCE_IMPLEMENTATION_SUMMARY.md  STATIONARY_OBJECT_DETECTION.md  VERIFICATION_CHECKLIST.md  VIEWFINDER_DEBUG_ARCHITECTURE.md  VIEWFINDER_DEBUG_INFO.md
cpp-object-detection/examples/: NOTIFICATION_EXAMPLES_README.md  README.md  burst_mode_demo.sh  hourly_summary_demo.cpp  notification_demo.sh  photo_storage_demo.cpp  sse_dashboard.html  stationary_timeout_examples.sh  webhook_receiver.py
cpp-object-detection/include/: application_context.hpp  config_manager.hpp  detection_model_interface.hpp  drawing_utils.hpp  efficientdet_d3_model.hpp  google_sheets_client.hpp  logger.hpp  network_streamer.hpp  notification_manager.hpp  object_detector.hpp  parallel_frame_processor.hpp  performance_monitor.hpp  scene_manager.hpp  system_monitor.hpp  viewfinder_window.hpp  webcam_interface.hpp  yolo_v5_model.hpp
cpp-object-detection/scripts/: build-linux-386.sh  build-mac.sh  build-rpi.sh  build.sh  build_profile_linux.sh  build_profile_mac.sh  download_flamegraph.sh  download_model.sh  download_models.sh  manual_test.sh  profile_cpu_linux.sh  profile_cpu_mac.sh  profile_memory_linux.sh  profile_memory_mac.sh  test-integration-linux-386.sh  test-integration-macos.sh  test-integration-rpi.sh  test-mac.sh  test.sh  test_coverage.sh  validate_profiling_setup.sh  verify_google_sheets.sh
cpp-object-detection/src/: application.cpp  config_manager.cpp  detection_model_factory.cpp  efficientdet_d3_model.cpp  google_sheets_client.cpp  logger.cpp  main.cpp  network_streamer.cpp  notification_manager.cpp  object_detector.cpp  parallel_frame_processor.cpp  performance_monitor.cpp  scene_manager.cpp  system_monitor.cpp  viewfinder_window.cpp  webcam_interface.cpp  yolo_v5_model.cpp
cpp-object-detection/tests/: CMakeLists.txt  test_config_manager.cpp  test_detection_model_interface.cpp  test_google_sheets_client.cpp  test_hourly_summary.cpp  test_logger.cpp  test_long_term_operation.cpp  test_network_streamer.cpp  test_night_mode.cpp  test_notification_manager.cpp  test_object_detector.cpp  test_parallel_frame_processor.cpp  test_performance_monitor.cpp  test_photo_storage_logic.cpp  test_scene_manager.cpp  test_stationary_detection.cpp  test_viewfinder_window.cpp  test_webcam_interface.cpp
detection/: detection.go  detection_test.go  download_models.sh  opencv_detector.go  opencv_detector_fallback.go  opencv_detector_python_backup.py
docs/: ADR-001-openapi-migration.md  OPENAPI_ARCHITECTURE.md  OPENAPI_MIGRATION_SUMMARY.md  README.md  opencv-detection.md
files/: files.go  files_test.go
frontend/: .gitignore  DARK_MODE.md  README.md  build.sh  index.html  package-lock.json  package.json  playwright.config.ts  test-output.txt  tsconfig.json  vite.config.ts
k6/: IMPLEMENTATION.md  README.md  load-test.js  smoke-test.js
monitoring/: README.md  monitor.go  monitor_test.go
rest/: json.go  json_test.go  model.go  rest.go  rest_test.go  template.go  template_test.go
scripts/: run-load-test.sh
static/: custom.go  index.go  jquery.go
timelapse/: camera.go  camera_test.go  model.go  timelapse.go  timelapse_test.go
timelapsepi/: README.md
(+66 files in other folders)
